--- a/index.html
+++ b/index.html
@@ -405,7 +405,75 @@
       .hero-main{padding:20px 10px;}
       .org-title{font-size:1.23rem;}
     }
-  </style>
+    .burger {
+  display: none;
+  position: absolute;
+  top: 22px;
+  right: 22px;
+  width: 44px;
+  height: 44px;
+  background: none;
+  border: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  cursor: pointer;
+}
+.burger span {
+  display: block;
+  width: 32px;
+  height: 4px;
+  margin: 5px 0;
+  background: #fff;
+  border-radius: 2px;
+  transition: 0.23s;
+}
+@media (max-width: 800px) {
+  .burger { display: flex; }
+  nav.navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 80vw;
+    max-width: 320px;
+    height: 100vh;
+    background: #fff;
+    box-shadow: 2px 0 24px #0002;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 84px 0 0 0;
+    gap: 0;
+    z-index: 88;
+    transform: translateX(-105%);
+    transition: transform .27s;
+    font-size: 1.15em;
+    border-radius: 0 16px 16px 0;
+  }
+  nav.navbar.open {
+    transform: translateX(0);
+  }
+  nav.navbar a {
+    width: 100%;
+    padding: 17px 26px;
+    border-radius: 0;
+    border-bottom: 1px solid #e5f6e8;
+    text-align: left;
+    font-size: 1.09em;
+  }
+  nav.navbar .btn-signup {
+    margin: 14px 0 0 0;
+    width: 90%;
+    align-self: center;
+    text-align: center;
+  }
+  body.menu-open {
+    overflow: hidden;
+    position: relative;
+    touch-action: none;
+  }
+}
+</style>
 </head>
 <body>
   <header class="main-header" data-aos="fade-down">
@@ -449,16 +517,19 @@
       </svg>
     </div>
   </header>
-  <div class="burger-bg" id="burgerBg"></div>
-  <nav class="navbar" id="mainNav" data-aos="fade-down" data-aos-delay="150">
-    <a href="#services">Услуги</a>
-    <a href="#prices">Цены</a>
-    <a href="#about-inspection">О техосмотре</a>
-    <a href="#steps">Этапы</a>
-    <a href="#faq">Вопросы</a>
-    <a href="#contacts">Контакты</a>
-    <a href="#form" class="btn-signup">Записаться</a>
-  </nav>
+  <button id="burger" class="burger" aria-label="Меню">
+  <span></span><span></span><span></span>
+</button>
+<nav class="navbar" id="mainNav">
+  <a href="#services">Услуги</a>
+  <a href="#prices">Цены</a>
+  <a href="#about-inspection">О техосмотре</a>
+  <a href="#steps">Этапы</a>
+  <a href="#faq">Вопросы</a>
+  <a href="#contacts">Контакты</a>
+  <a href="#form" class="btn-signup">Записаться</a>
+</nav>
+<div class="burger-bg" id="burgerBg"></div>
   <div class="container">
     <div class="hero-row">
       <div class="hero-main" data-aos="fade-right">
@@ -795,6 +866,29 @@
       }
     }
   </script>
+  <script>
+const burger = document.getElementById('burger');
+const mainNav = document.getElementById('mainNav');
+burger.onclick = function() {
+  mainNav.classList.toggle('open');
+  document.body.classList.toggle('menu-open');
+  burger.classList.toggle('active');
+};
+mainNav.querySelectorAll('a').forEach(link => {
+  link.onclick = function() {
+    mainNav.classList.remove('open');
+    document.body.classList.remove('menu-open');
+    burger.classList.remove('active');
+  };
+});
+document.addEventListener('click', function(e){
+  if(mainNav.classList.contains('open') && !mainNav.contains(e.target) && e.target!==burger && !burger.contains(e.target)){
+    mainNav.classList.remove('open');
+    document.body.classList.remove('menu-open');
+    burger.classList.remove('active');
+  }
+});
+</script>
 </body>
 </html>
 
