--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       text-align: left;
     }
     .pattern-wrap {width:100%;height:60px;position:relative;overflow:hidden;margin-top:-9px;z-index:1;line-height:0;}
-
     /* Бургер-меню стили */
     .burger {
       display: none;
@@ -405,75 +404,7 @@
       .hero-main{padding:20px 10px;}
       .org-title{font-size:1.23rem;}
     }
-    .burger {
-  display: none;
-  position: absolute;
-  top: 22px;
-  right: 22px;
-  width: 44px;
-  height: 44px;
-  background: none;
-  border: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 99;
-  cursor: pointer;
-}
-.burger span {
-  display: block;
-  width: 32px;
-  height: 4px;
-  margin: 5px 0;
-  background: #fff;
-  border-radius: 2px;
-  transition: 0.23s;
-}
-@media (max-width: 800px) {
-  .burger { display: flex; }
-  nav.navbar {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 80vw;
-    max-width: 320px;
-    height: 100vh;
-    background: #fff;
-    box-shadow: 2px 0 24px #0002;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 84px 0 0 0;
-    gap: 0;
-    z-index: 88;
-    transform: translateX(-105%);
-    transition: transform .27s;
-    font-size: 1.15em;
-    border-radius: 0 16px 16px 0;
-  }
-  nav.navbar.open {
-    transform: translateX(0);
-  }
-  nav.navbar a {
-    width: 100%;
-    padding: 17px 26px;
-    border-radius: 0;
-    border-bottom: 1px solid #e5f6e8;
-    text-align: left;
-    font-size: 1.09em;
-  }
-  nav.navbar .btn-signup {
-    margin: 14px 0 0 0;
-    width: 90%;
-    align-self: center;
-    text-align: center;
-  }
-  body.menu-open {
-    overflow: hidden;
-    position: relative;
-    touch-action: none;
-  }
-}
-</style>
+  </style>
 </head>
 <body>
   <header class="main-header" data-aos="fade-down">
@@ -481,7 +412,7 @@
       <img src="logo.jfif" alt="Логотип" class="main-logo">
       <span class="org-title">ООО "БАШСНАБГАЗ"</span>
     </div>
-    <button class="burger" id="burgerBtn" aria-label="Открыть меню">
+    <button class="burger" id="burger" aria-label="Открыть меню">
       <span class="burger-bar"></span>
       <span class="burger-bar"></span>
       <span class="burger-bar"></span>
@@ -517,19 +448,16 @@
       </svg>
     </div>
   </header>
-  <button id="burger" class="burger" aria-label="Меню">
-  <span></span><span></span><span></span>
-</button>
-<nav class="navbar" id="mainNav">
-  <a href="#services">Услуги</a>
-  <a href="#prices">Цены</a>
-  <a href="#about-inspection">О техосмотре</a>
-  <a href="#steps">Этапы</a>
-  <a href="#faq">Вопросы</a>
-  <a href="#contacts">Контакты</a>
-  <a href="#form" class="btn-signup">Записаться</a>
-</nav>
-<div class="burger-bg" id="burgerBg"></div>
+  <nav class="navbar" id="mainNav">
+    <a href="#services">Услуги</a>
+    <a href="#prices">Цены</a>
+    <a href="#about-inspection">О техосмотре</a>
+    <a href="#steps">Этапы</a>
+    <a href="#faq">Вопросы</a>
+    <a href="#contacts">Контакты</a>
+    <a href="#form" class="btn-signup">Записаться</a>
+  </nav>
+  <div class="burger-bg" id="burgerBg"></div>
   <div class="container">
     <div class="hero-row">
       <div class="hero-main" data-aos="fade-right">
@@ -810,7 +738,6 @@
         this.classList.toggle('open');
       });
     });
-
     // WhatsApp + Formspree форма
     document.getElementById('whatsappForm').addEventListener('submit', function(e) {
       e.preventDefault();
@@ -867,28 +794,28 @@
     }
   </script>
   <script>
-const burger = document.getElementById('burger');
-const mainNav = document.getElementById('mainNav');
-burger.onclick = function() {
-  mainNav.classList.toggle('open');
-  document.body.classList.toggle('menu-open');
-  burger.classList.toggle('active');
-};
-mainNav.querySelectorAll('a').forEach(link => {
-  link.onclick = function() {
-    mainNav.classList.remove('open');
-    document.body.classList.remove('menu-open');
-    burger.classList.remove('active');
-  };
-});
-document.addEventListener('click', function(e){
-  if(mainNav.classList.contains('open') && !mainNav.contains(e.target) && e.target!==burger && !burger.contains(e.target)){
-    mainNav.classList.remove('open');
-    document.body.classList.remove('menu-open');
-    burger.classList.remove('active');
-  }
-});
-</script>
+    // Управление бургер-меню
+    const burger = document.getElementById('burger');
+    const mainNav = document.getElementById('mainNav');
+    burger.onclick = function() {
+      mainNav.classList.toggle('open');
+      document.body.classList.toggle('menu-open');
+      burger.classList.toggle('active');
+    };
+    mainNav.querySelectorAll('a').forEach(link => {
+      link.onclick = function() {
+        mainNav.classList.remove('open');
+        document.body.classList.remove('menu-open');
+        burger.classList.remove('active');
+      };
+    });
+    document.addEventListener('click', function(e){
+      if(mainNav.classList.contains('open') && !mainNav.contains(e.target) && e.target!==burger && !burger.contains(e.target)){
+        mainNav.classList.remove('open');
+        document.body.classList.remove('menu-open');
+        burger.classList.remove('active');
+      }
+    });
+  </script>
 </body>
 </html>
-
