--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       width: 100%;
     }
     .main-logo {width:66px;height:66px;max-width:22vw;object-fit:contain;filter:drop-shadow(0 4px 10px #0002);}
+
     .org-title {
       color: #fff;
       font-size: 2rem;
@@ -63,7 +64,6 @@
       text-align: left;
     }
     .pattern-wrap {width:100%;height:60px;position:relative;overflow:hidden;margin-top:-9px;z-index:1;line-height:0;}
-
     /* Бургер-меню стили */
     .burger {
       display: none;
@@ -136,6 +136,7 @@
     nav.navbar {background:var(--white);box-shadow:0 3px 10px #0001;display:flex;justify-content:center;align-items:center;height:var(--menu-height);gap:32px;font-weight:bold;font-size:1.09em;position:sticky;top:0;z-index:10;}
     nav.navbar a {color:var(--green);text-decoration:none;padding:9px 18px;border-radius:6px;transition:background .18s, color .18s;}
     nav.navbar a:hover,nav.navbar a.active{background:var(--green);color:var(--white);}
+
     .btn-signup {
       background: var(--green);
       color: #fff !important;
@@ -155,6 +156,7 @@
     @media (max-width:600px){
       .btn-signup { padding: 7px 8vw !important; font-size:1.1em;}
     }
+
     .container{max-width:1100px;margin:0 auto;padding:0 16px;}
     .hero-row{
       display: flex;
@@ -228,7 +230,6 @@
     .hero-card form{display:flex;flex-direction:column;gap:12px;margin-bottom:6px;}
     .hero-card input{padding:11px 14px;border-radius:7px;border:1px solid #d0e6d0;font-size:1em;background:#fff;color:var(--text);outline:none;margin-bottom:2px;}
     .hero-card input:focus{box-shadow:0 0 0 2px var(--green);}
-
     .hero-card button{padding:13px 0;font-weight:bold;font-size:1.05em;background:var(--green);border:none;color:#fff;border-radius:7px;cursor:pointer;transition:background 0.19s;margin-top:3px;}
     .hero-card button:hover{background:#0b871b;}
     .hero-card .agree{font-size:0.95em;color:#678564;opacity:.82;margin-top:5px;text-align:left;}
@@ -240,11 +241,11 @@
     .cards-list{display:flex;flex-wrap:wrap;justify-content:center;gap:28px;margin-bottom:30px;}
     .card{background:var(--light-alt);border-radius:13px;min-width:215px;max-width:260px;padding:30px 20px 24px 20px;box-shadow:var(--shadow);display:flex;flex-direction:column;align-items:center;text-align:center;transition:transform .19s;}
     .card:hover{transform:translateY(-5px) scale(1.02);}
+
     .card i{font-size:2.6em;color:var(--green);margin-bottom:12px;}
     .card h3{margin:7px 0 6px 0;color:var(--yellow);font-size:1.18em;font-weight:600;letter-spacing:.01em;}
     .card p{color:#333;font-size:1em;opacity:.87;}
     .section:nth-child(even) { background: var(--white);}
-
     .section:nth-child(odd) { background: var(--light);}
 
     .prices-table{margin:0 auto 20px auto;max-width:420px;width:100%;border-radius:12px;background:#f8fff6;box-shadow:var(--shadow);overflow:hidden;}
@@ -262,8 +263,10 @@
     .faq-item.open .faq-toggle{transform:rotate(45deg);}
     .faq-item .faq-a{max-height:0;overflow:hidden;opacity:0;transition:max-height .4s,opacity .32s;font-size:1.16em;line-height:1.8;margin-top:8px;}
     .faq-item.open .faq-a{max-height:900px;opacity:1;margin-top:13px;}
+
     .big-map{display:flex;justify-content:center;}
     .big-map iframe{width:100%;max-width:800px;height:340px;border-radius:14px;border:none;margin:auto;display:block;}
+
     .btn-top {
       position: fixed;
       right: 26px;
@@ -367,8 +370,8 @@
       animation: zoomin .28s;
     }
     @keyframes zoomin {
-      from { transform: scale(0.82); }
-      to { transform: scale(1); }
+      from { transform: scale(0.82);}
+      to { transform: scale(1);}
     }
     .doc-modal-caption {
       color: #fff;
@@ -402,6 +405,7 @@
       .big-map iframe{height:180px;}
       .hero-main{padding:10px 3px;}
     }
+
     footer{margin-top:60px;background:#232323;padding:26px 0;text-align:center;color:#d1d1d1;font-size:16px;letter-spacing:0.02em;}
     @media (max-width:900px){
       .hero-row{flex-direction:column;gap:18px;align-items:stretch;}
@@ -525,6 +529,7 @@
         <iframe class="map" src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </div>
+    </div>
     <section id="services" class="section" data-aos="fade-up">
       <div class="section-title" data-aos="zoom-in">Категории транспортных средств</div>
       <div class="cards-list">
@@ -639,6 +644,63 @@
             При подаче заявки онлайн оператор сам подскажет детали.
           </div>
         </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="160">
+          <div class="faq-q">Что проверяют при техосмотре?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            <ul>
+              <li>Работу тормозной системы</li>
+              <li>Световые приборы, стеклоочистители</li>
+              <li>Ремни безопасности, подушки</li>
+              <li>Шины, протектор</li>
+              <li>Отсутствие течей и коррозии</li>
+              <li>Работу двигателя, подвески, рулевого управления</li>
+            </ul>
+            По результатам выдается диагностическая карта.
+          </div>
+        </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="190">
+          <div class="faq-q">Что делать при утере диагностической карты?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            Карта восстанавливается через обращение к любому аккредитованному оператору или онлайн по VIN-номеру через реестр ЕАИСТО.<br>
+            При утере бумажного экземпляра — информация всегда доступна в электронной базе.
+          </div>
+        </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="220">
+          <div class="faq-q">Где проверить действительность карты?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            Проверить действительность карты можно на сайте <a href="https://gibdd.ru" target="_blank" style="color:var(--green);">gibdd.ru</a> по VIN или номеру кузова.
+          </div>
+        </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="250">
+          <div class="faq-q">Можно ли пройти техосмотр вне места регистрации автомобиля?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            Да, вы можете пройти техосмотр в любом регионе России, независимо от регистрации вашего ТС.
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contacts" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">Контакты</div>
+      <div style="text-align:center;margin-bottom:16px;">
+        <b>ООО "БАШСНАБГАЗ"</b><br>
+        ОГРН: 1200200023210 &nbsp; | &nbsp; ИНН: 0273934433<br>
+        Юр. Адрес: 450112, Российская Федерация,<br>
+        Республика Башкортостан, г. Уфа,<br>
+        ул. Цветочная, д. 1/4<br>
+        <a href="tel:+79272351405" style="color:var(--green);text-decoration:none;font-weight:600">+7 (927) 235‑14‑05</a><br>
+        <a href="mailto:to1629271@gmail.com" style="color:#444;text-decoration:underline;">to1629271@gmail.com</a>
+        <div class="docs-title">Документы:</div>
+        <div class="doc-gallery">
+          <img src="Attestat.png" alt="Аттестат аккредитации" class="doc-thumb" onclick="openDocModal(this)">
+          <img src="Prikaz.png" alt="Приказ о предоставлении аккредитации" class="doc-thumb" onclick="openDocModal(this)">
+        </div>
+      </div>
+      <div class="big-map">
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </section>
   </div>
